# bit

./: C4_ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml  skills-lock.json
.claude/: settings.json
.claude/skills/: README.md  manifest.json
.claude/skills/conventional-commit/: manifest.json
.claude/skills/manage-docs/: SKILL.md  manifest.json
bit/: character.py  character_frames.py  frames.yaml  main.py
