[project]
name = "bit"
version = "0.1.0"
description = "CLI interativa com personagem ASCII animado"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
    "textual>=8.1.1",
    "typer>=0.24.1",
]

[project.scripts]
bit = "bit.main:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "ruff>=0.15.7",
    "ty>=0.0.25",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
